full dark mode, minor ui fixes, links around the page rather than just the nav bar menu

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,1 @@
 
-body {
-  background-color: #f8f8ff ;
-}
-
